--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,68 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Saheelha</title>
+<!DOCTYPE html>
+<html>
+<head lang="en">
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta charset="UTF-8">
+  <title>Zéro gaspillage</title><!--[if IE]>
+  <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1"><![endif]-->
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=0, shrink-to-fit=no">
+  <meta name="format-detection" content="telephone=no">
+  <!-- Loading Source Sans Pro font that is used in this theme-->
+  <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700%7cSource+Sans+Pro:200,400,600,700,900,400italic,700italic&amp;subset=latin,latin-ext" rel="stylesheet" type="text/css">
+  <!-- Boostrap and other lib styles-->
+  <!-- build:cssvendor-->
+  <link rel="stylesheet" href="assets/css/vendor.css">
+  <!-- endbuild-->
+  <!-- Font-awesome lib-->
+  <!-- build:cssfontawesome-->
+  <link rel="stylesheet" href="assets/css/font-awesome.css">
+  <!-- endbuild-->
+  <!-- Theme styles, please replace "default" with other color scheme from the list available in template/css-->
+  <!-- build:csstheme-default-->
+  <link rel="stylesheet" href="assets/css/theme-default.css">
+  <!-- endbuild-->
+  <!-- Your styles should go in this file-->
+  <link rel="stylesheet" href="assets/css/custom.css">
+  <!-- Fixes for IE-->
+  <!--[if lt IE 11]>
+  <link rel="stylesheet" href="assets/css/ie-fix.css"><![endif]-->
+  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+  <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places,drawing,geometry"></script>
+  <script type="text/javascript" src="http://cdn.ckeditor.com/4.5.6/standard/ckeditor.js"></script>
+  <!--
+  Contains vendor libraries (Bootstrap3, Jquery, Chosen, etc) already compiled into a single file, with
+  versions that are verified to work with our theme. Normally, you should not edit that file.
+  -->
+  <!-- build:jsvendor-->
+  <script type="text/javascript" src="assets/js/vendor.js"></script>
+  <!-- endbuild-->
+  <!--
+  This file is used for demonstration purposes and contains example property items, that are mostly used to
+  render markers on the map. You can safely delete this file, after you've adapted the demo.js code
+  to use your own data.
+  -->
+  <!-- build:jsdemodata-->
+  <script type="text/javascript" src="assets/js/demodata.js"></script>
+  <!-- endbuild-->
+  <!--
+  The library code that Realtyspace theme relies on, in order to function properly.
+  Normally, you should not edit this file or add your own code there.
+  -->
+  <!-- build:jsapp-->
+  <script type="text/javascript" src="assets/js/app.js"></script>
+  <!-- endbuild-->
+  <!--
+  the main file, that you should modify. It contains lots of examples of
+  plugin usage, with detailed comments about specific sections of the code.
+  -->
+  <!-- build:jsdemo-->
+  <script type="text/javascript" src="assets/js/demo.js"></script>
+  <!-- endbuild--><!-- inject:ga  -->
+  <!-- endinject -->
+  <!-- END SCRIPTS and INCLUDES-->
+
 </head>
-<body>
-  <app-root></app-root>
-</body>
+
+<app-root></app-root>
+
 </html>
