--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,6 @@
 <head lang="en">
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
   <meta charset="UTF-8">
   <title>Zéro gaspillage</title><!--[if IE]>
   <meta http-equiv="X-UA-Compatible" content="IE=9,chrome=1"><![endif]-->
@@ -28,7 +27,7 @@
   <!-- Fixes for IE-->
   <!--[if lt IE 11]>
   <link rel="stylesheet" type="text/css" href="assets/css/ie-fix.css"><![endif]-->
-  <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/assets/img/zero.png" type="image/x-icon">
   <script type="text/javascript" src="http://maps.google.com/maps/api/js?libraries=places,drawing,geometry"></script>
   <script type="text/javascript" src="http://cdn.ckeditor.com/4.5.6/standard/ckeditor.js"></script>
   <!--
